--- a/Remote1/public/index.html
+++ b/Remote1/public/index.html
@@ -7,6 +7,7 @@
         <meta name="description" content="Remote 1" />
         <link data-remote="Remote1" rel="stylesheet" type="text/css" href="%PUBLIC_URL%/asset/site.css" />
         <script src="%PUBLIC_URL%/host-config.js"></script>
+        <!-- <base href="http://localhost:3000/"> : This causing the load Host application with different errors. -->
         <title>Remote 1</title>
     </head>
 
